2007-11-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* m4/ax_func_zdotu.m4: Cosmetic changes in printed messages

2007-11-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/factory.h: Add explicit constructor definition in a
	default Factory class

	Without this explicit empty constructor in the Factory class, some
	compilers (PGI, HP C/aC++) give warnings or errors on a constant
	DEFAULT_FACTORY.

	* configure.ac.in, itpp/base/math/misc.h, itpp/config_msvc.h: Add
	additional checks for isinf() and isfinite() macros

	Without these new checks the compilation might fail on
	redeclaration of these macros with inline functions in
	itpp/base/math/misc.h. This problem occurs for instance on a
	HP-UX system.

2007-11-21  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac.in, itpp/base/math/misc.h, itpp/config_msvc.h:
	Clean up checks for finite(), isfinite() and isnan()

	isnan() is defined as a macro on some systems in <math.h>, so we
	should check for it. BTW, removed macro definition of finite(),
	which is also defined as inline function in
	"itpp/base/math/misc.h".

	* configure.ac.in: Removed duplicated checks

	AC_HEADER_STDC is invoked when AC_LANG([C++]) is used, whereas
	AC_PROG_MAKE_SET is executed by AM_INIT_AUTOMAKE.

	* m4/ac_cxx_extern_template.m4: Obsolete macros replaced with the
	ones recommended by autoconf

	AC_LANG_SAVE + AC_LANG_CPLUSPLUS  ->  AC_LANG_PUSH([C++])
	AC_LANG_RESTORE  ->  AC_LANG_POP([C++])
	AC_TRY_COMPILE  ->  AC_COMPILE_IFELSE + AC_LANG_PROGRAM

	* configure.ac.in, m4/acx_blas.m4, m4/acx_lapack.m4,
	m4/acx_fft.m4: Use AS_HELP_STRING macros instead of obsolete
	AC_HELP_STRING ones

	* Makefile.am, autogen.sh, configure.ac.in,
	m4/ac_cxx_extern_template.m4, m4/acx_blas.m4, m4/acx_lapack.m4,
	m4/acx_fft.m4: Renamed "config" directory to "m4" to reflect its
	contents

	* autogen.sh, configure.ac.in: Use "build-aux" directory for
	auxiliary building scripts
