@@ -343,6 +343,14 @@ AH_BOTTOM([
 #  define finite(a) isfinite(a)
 #endif
 
+/* IT++ uses only std::min() and std::max() functions, not macros */
+#ifdef min
+#  undef min
+#endif
+#ifdef max
+#  undef max
+#endif
+
 #endif /* #ifndef CONFIG_H */
 ])
 
